--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -37,4 +37,8 @@
     @Html.HiddenFor(c => c.Customer.Id)
 
     <button type="submit" class="btn btn-primary">Save</button>
+
+    @section scripts{
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
