--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -35,7 +35,7 @@
     </div>
 
     @Html.HiddenFor(c => c.Customer.Id)
-
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 
     @section scripts{
