--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -55,7 +55,7 @@ else
     @section scripts{
         <script>
             $(document).ready(function() {
-                $("#customers .js-delete").on("click",
+                $("#customers").on("click", ".js-delete",
                     function() {
                         var button = $(this);
                         bootbox.confirm("Are you sure you want to delete this customer?", function(result) {
