--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -21,12 +21,12 @@
     @Html.ActionLink("New Customer","New", "Customers", new {@class="btn btn-primary"})
 </p>
 
-@if (!Model.Any())
+@*@if (!Model.Any())
 {
     <p>We don't have any customers yet.</p>
 }
 else
-{
+{*@
     <table id="customers" class="table table-bordered table-hover">
         <thead>
         <tr>
@@ -38,7 +38,7 @@ else
 
         </thead>
         <tbody>
-        @foreach (var customer in Model)
+        @*@foreach (var customer in Model)
         {
             <tr>
                 <td>@Html.ActionLink(customer.Name, "Edit", "Customers", new { id = customer.Id }, null)</td>
@@ -48,32 +48,56 @@ else
                     <button data-customer-id="@customer.Id" class="btn-link js-delete">Delete</button>
                 </td>
             </tr>
-        }
+        }*@
         </tbody>
     </table>
 
     @section scripts{
         <script>
-            $(document).ready(function () {
-                $("#customers").DataTable();
+            $(document).ready(function() {
+                $("#customers").DataTable({
+                    ajax: {
+                        url: "/api/customers",
+                        dataSrc: ""
+                    },
+                    columns: [
+                        {
+                            data: "name",
+                            render: function(data, type, customer) {
+                                return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                            }
+                        },
+                        {
+                            data: "name"
+                        },
+                        {
+                            data: "id",
+                            render: function(data) {
+                                return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                            }
+                        }
+                    ]
+                });
 
-                $("#customers").on("click", ".js-delete",
+                $("#customers").on("click",
+                    ".js-delete",
                     function() {
                         var button = $(this);
-                        bootbox.confirm("Are you sure you want to delete this customer?", function(result) {
-                            if (result) {
-                                $.ajax({
-                                    url: "/api/customers/" + button.attr("data-customer-id"),
-                                    method: "DELETE",
-                                    success: function() {
-                                        button.parents("tr").remove();
-                                    }
-                                });
-                            }
-                        });
+                        bootbox.confirm("Are you sure you want to delete this customer?",
+                            function(result) {
+                                if (result) {
+                                    $.ajax({
+                                        url: "/api/customers/" + button.attr("data-customer-id"),
+                                        method: "DELETE",
+                                        success: function() {
+                                            button.parents("tr").remove();
+                                        }
+                                    });
+                                }
+                            });
                     });
             });
         </script>
-    }
+   @* }*@
 }
 
