--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -68,7 +68,7 @@ else
                             }
                         },
                         {
-                            data: "name"
+                            data: "membershipType.name"
                         },
                         {
                             data: "id",
