--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -55,29 +55,29 @@ else
     @section scripts{
         <script>
             $(document).ready(function() {
-                $("#customers").DataTable({
-                    ajax: {
-                        url: "/api/customers",
-                        dataSrc: ""
-                    },
-                    columns: [
-                        {
-                            data: "name",
-                            render: function(data, type, customer) {
-                                return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
-                            }
-                        },
-                        {
-                            data: "membershipType.name"
-                        },
-                        {
-                            data: "id",
-                            render: function(data) {
-                                return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
-                            }
-                        }
-                    ]
-                });
+                var table = $("#customers").DataTable({
+                                ajax: {
+                                    url: "/api/customers",
+                                    dataSrc: ""
+                                },
+                                columns: [
+                                    {
+                                        data: "name",
+                                        render: function(data, type, customer) {
+                                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
+                                        }
+                                    },
+                                    {
+                                        data: "membershipType.name"
+                                    },
+                                    {
+                                        data: "id",
+                                        render: function(data) {
+                                            return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                                        }
+                                    }
+                                ]
+                            });
 
                 $("#customers").on("click",
                     ".js-delete",
@@ -89,8 +89,8 @@ else
                                     $.ajax({
                                         url: "/api/customers/" + button.attr("data-customer-id"),
                                         method: "DELETE",
-                                        success: function() {
-                                            button.parents("tr").remove();
+                                        success: function () {
+                                            table.row(button.parents("tr")).remove().draw();
                                         }
                                     });
                                 }
