--- a/Vidly/Views/Rentals/New.cshtml
+++ b/Vidly/Views/Rentals/New.cshtml
@@ -90,10 +90,10 @@
                     method: "post",
                     data: vm
                 }).done(function () {
-                        console.log("done");
+                    toastr.success("Rentals successfully recorded.");
                     })
                     .fail(function () {
-
+                        toastr.error("Something unexpected happened.");
                     });
             });
         });
